Updated Base64 encoder